enhancement bot launch & webhook registration

--- a/.env
+++ b/.env
@@ -27,3 +27,6 @@ PUBLIC_URL="https://b6254e62.ngrok.io"
 # Local port where your bot will be started
 # defaults to 3000
 #PORT=8080
+
+# Node Environment
+NODE_ENV=development
